--- a/docs/fosdem/index.org
+++ b/docs/fosdem/index.org
@@ -174,6 +174,9 @@ https://files.mastodon.social/media_attachments/files/107/741/356/746/575/088/or
     - Let's meet again at: [[https://xcp-ng.org/forum/topic/11778/fosdem-2026][XCP-ng stand]]
       - or Junior Room (7-17 Yo)
 	- to inspire the next generations
+* droids @ xcp-ng
+#+ATTR_HTML: :width 50% :align center style="border:0px solid black;"
+https://files.mastodon.social/cache/preview_cards/images/179/562/146/original/274fc1468b168fe4.png
 
 * Extra?
 
