--- a/docs/fosdem/index.org
+++ b/docs/fosdem/index.org
@@ -133,10 +133,11 @@ https://media2.dev.to/dynamic/image/width=1000,height=420,fit=cover,gravity=auto
   - 2021/2022: Was online on matrix chat
     - Let's adapt
 
-* Fosdem@home
-#+ATTR_HTML: :width 1000% :align center style="border:0px solid black;"
+* 2021 Fosdem locked down
+#+ATTR_HTML: :width 75% :align center style="border:0px solid black;"
 https://files.mastodon.social/media_attachments/files/107/741/356/746/575/088/original/5ed15e0de9c7ae9d.jpeg
 
+* 2022... again
   - 2021 : as Volunteer (online)
     - Wached OpenHarmony launch (Huawei)
       - A yocto derived project under eclipe
@@ -150,12 +151,12 @@ https://files.mastodon.social/media_attachments/files/107/741/356/746/575/088/or
 * When ?
   - 2025, headehunter contacted me (said OSS)
     - I hesitated to change job, until I found...
-    - ... a FOSDEM video of company Co-Founder
-      - xcpp-ng story, relationship to xen...
+    - a FOSDEM video of company Co-Founder
+      - XCP-ng story, relationship to Xen...
       - Recurent presence and consistency !!!
   - Values aligned for a FLOSS passionate !
   - 2026: We, [[https://vates.tech/blog/fosdem-2026/][Vates staff will host a stand]]
-    - Check for Xen, xcp-ng (H building)
+    - Check for Xen, XCP-ng (H building)
 
 * Summary
   - FOSDEM is huge can't be sumirized in 15min,
