WIP: mod: docs/fosdem/index.org (master)
Change-Id: I6d122077600480d804616f839af08185ebd39390
Signed-off-by: Philippe Coval <rzr@users.sf.net>

--- a/docs/fosdem/index.org
+++ b/docs/fosdem/index.org
@@ -133,11 +133,11 @@ https://media2.dev.to/dynamic/image/width=1000,height=420,fit=cover,gravity=auto
   - 2021/2022: Was online on matrix chat
     - Let's adapt
 
-* 2021 Fosdem locked down
+* 2021, locked down
 #+ATTR_HTML: :width 75% :align center style="border:0px solid black;"
 https://files.mastodon.social/media_attachments/files/107/741/356/746/575/088/original/5ed15e0de9c7ae9d.jpeg
 
-* 2022... again
+* 2022, again
   - 2021 : as Volunteer (online)
     - Wached OpenHarmony launch (Huawei)
       - A yocto derived project under eclipe
