WIP: mod: docs/fosdem/index.org (master)
Change-Id: I90fa2e1bf851d443620bd9855672fac21d71a622
Signed-off-by: Philippe Coval <rzr@users.sf.net>

--- a/docs/fosdem/index.org
+++ b/docs/fosdem/index.org
@@ -79,12 +79,12 @@ sources ouvertes), n'est guerre mieux qu'un banal logiciel :)
 
 * Where?
   #+ATTR_REVEAL: :frag (fade-in)
-   - FOSDEM is a community driven FLOSS event
-   - free like beer (of BXL.be at ULB)
-   - free like speech: (1K talks)
+ - FOSDEM is a community driven FLOSS event
+   - free like /beer/ (of BXL.be at ULB)
+   - free like /speech/: (~1K talks)
  - On 1st WEEKEND of Feb (winter) since Y2K
    - filters un-passionate people
-   - spoiler: does not work: 8K attendees
+   - spoiler: does not work: +8K attendees
  - If you care about OSS:
    - it's a lifetime experience
  - It changed my life! maybe yours (soon?)
