WIP: mod: docs/fosdem/index.org (master)
Change-Id: I9548ad3b1a257795af8d28a76559a4e9e43c0959
Signed-off-by: Philippe Coval <rzr@users.sf.net>

--- a/docs/fosdem/index.org
+++ b/docs/fosdem/index.org
@@ -156,7 +156,7 @@ https://files.mastodon.social/media_attachments/files/107/741/356/746/575/088/or
 
 * When ?
   #+ATTR_REVEAL: :frag (fade-in)
-  - 2025, headehunter contacted me (said OSS)
+  - 2025, headhunter contacted me (said OSS)
     - I hesitated to change job, until I found...
     - a FOSDEM video of company Co-Founder
       - XCP-ng story, relationship to Xen...
